data/derived/fa15/progs/unify/prog0837.ml.out
Characters 131-139:
  let seen' = if List.mem h seen then seen@[h] in
                                      ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
